# foodify.ai

./: .env.example  .gitignore  README.md  app.py  foodify.ai.ipynb  helper.py  main.py  pyproject.toml
.streamlit/: config.toml
dataset/: INS_agent_dataset.jsonl  INS_function_schema.json  INS_synonyms.json
nodes/: __init__.py  allergen_analysis.py  extract_text_from_image.py  final_analysis.py  ingredient_analysis.py  ins_analysis.py  nova_analysis.py  nutrient_analysis.py  parse_nutrition_label.py
